syntax = "proto3";

package im.turms.proto;

option java_package = "im.turms.common.constant";
option java_multiple_files = true;
option swift_prefix = "";

enum ChatType {
    PRIVATE = 0;
    GROUP = 1;
}
