syntax = "proto3";

package im.turms.proto;

option java_package = "im.turms.common.model.dto.request.group.enrollment";
option java_multiple_files = true;

message CreateGroupJoinRequestRequest {
    int64 group_id = 1;
    string content = 2;
}